[project]
name = "mapcharting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.15.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "scipy>=1.17.1",
    "tensorflow>=2.20.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]
